--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -30,14 +29,14 @@
         text-align: center;
       }
       .jumbotron h1 {
-        font-size: 72px;
-        font-weight: normal;
+        font-size: 100px;
         line-height: 1;
       }
+      .jumbotron h2 {
+        font: 72px;
+      }
       .jumbotron .lead {
-        font-size: 50px;
-        font-weight: bold;
-        color: #5A87D8;
+        font-size: 34px;
         line-height: 1.25;
         margin-bottom: 25px;
       }
@@ -83,10 +82,6 @@
         border-right: 0;
         border-radius: 0 3px 3px 0;
       }
-      .small {
-        font-weight: bold;
-        color: #5A87D8;
-      }
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -108,7 +103,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted">Apartment Cleaning Service <small class="small"> for Airbnb hosts</small></h3>
+        <h3 class="muted">Apartment Cleaning Service</h3>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
@@ -127,30 +122,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Apartmet Cleaning Service</h1>
-        <p class="lead">for Airbnb hosts.</p>
-        <a class="btn btn-large btn-success" href="book">Book</a>
-      </div>
-
-      <hr>
-
-      <!-- Example row of columns -->
-      <div class="row-fluid">
-        <div class="span4">
-          <h2>Cleaning</h2>
-          <p>Service designed for Airbnb hosts. All cleaners understand how to prepare your rental specifically for Airbnb.</p>
-          <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
-        </div>
-        <div class="span4">
-          <h2>Sheets and Towels</h2>
-          <p>We provide clean sheets and towels so you don't have to worry about sharing your own.</p>
-          <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
-       </div>
-        <div class="span4">
-          <h2>Other Services</h2>
-          <p>Arrange airport pick-up, guest welcome packages, key drop off and other ancillary services.</p>
-          <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
-        </div>
+        <h2>Coming soon to your location!</h2>
       </div>
 
       <hr>
