--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -82,6 +82,10 @@
         border-right: 0;
         border-radius: 0 3px 3px 0;
       }
+      .small {
+        font-weight: bold;
+        color: #5A87D8;
+      }
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -103,7 +107,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted">Apartment Cleaning Service</h3>
+        <h3 class="muted">Apartment Cleaning Service <small class="small"> for Airbnb hosts</small></h3>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
