--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -114,8 +114,8 @@
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
+                <li><a href="#">Pricing</a></li>
                 <li><a href="#">Locations</a></li>
-                <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Help</a></li>
               </ul>
