--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -114,11 +114,11 @@
             <div class="container">
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Locations</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="book">Services</a></li>
+                <li><a href="book">Pricing</a></li>
+                <li><a href="book">Locations</a></li>
+                <li><a href="book">Contact</a></li>
+                <li><a href="book">Help</a></li>
               </ul>
             </div>
           </div>
