--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Apartment Cleaning Service</title>
+    <title>Apartment Cleaning Service for Airbnb hosts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -112,7 +112,7 @@
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><%= link_to "Home", root_path %> </li>
                 <li><a href="book">Services</a></li>
                 <li><a href="book">Pricing</a></li>
                 <li><a href="book">Locations</a></li>
