Add comment box:

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -171,6 +171,10 @@
 
       <hr>
 
+      <%= render "static_pages/comments" %>
+
+      <hr>
+
       <div class="footer">
         <p>Apartment Cleaning Service is in no way affiliated with © Airbnb, Inc.</p>
       </div>
