--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -146,6 +146,10 @@
 
       <hr>
 
+      <%= render "static_pages/comments" %>
+
+      <hr>
+
       <div class="footer">
         <p>Apartment Cleaning Service is in no way affiliated with © Airbnb, Inc.</p>
       </div>
