Change to HummingBird

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Apartment Cleaning Service for Airbnb hosts</title>
+    <title>HummingBird Apartment Cleaning Service for Airbnb hosts</title>
     <meta name="description" content="Apartment Cleaning Service for Airbnb hosts">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="">
@@ -87,6 +87,10 @@
         font-weight: bold;
         color: #5A87D8;
       }
+      .brand {
+        font-weight: bold;
+        color: #5A87D8;
+      }
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -124,7 +128,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted">Apartment Cleaning Service <small class="small"> for Airbnb hosts</small></h3>
+        <h3><span class="brand">HummingBird</span> </h3>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
@@ -176,7 +180,7 @@
       <hr>
 
       <div class="footer">
-        <p>Apartment Cleaning Service is in no way affiliated with © Airbnb, Inc.</p>
+        <p>HummingBird is in no way affiliated with © Airbnb, Inc.</p>
       </div>
 
     </div> <!-- /container -->
