--- a/app/views/static_pages/book.html.erb
+++ b/app/views/static_pages/book.html.erb
@@ -122,7 +122,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted">Apartment Cleaning Service <small class="small"> for Airbnb hosts</small></h3>
+        <h3 class="muted">HummingBird Apartment Cleaning Service <small class="small"> for Airbnb hosts</small></h3>
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container">
