--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <!-- Jumbotron -->
 <div class="jumbotron">
-  <h1>Apartmet Cleaning Service</h1>
+  <h1>Apartment Cleaning Service</h1>
   <p class="lead">for Airbnb hosts.</p>
   <a class="btn btn-large btn-success" href="book">Book</a>
 </div>
