Just a quick update before deleting a file

--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -64,7 +64,7 @@
         <%= f.label :washer, "My apartment has a washer and dryer", :style => "float:left;" %>
       </div>
       <div class="actions">
-        <%= f.submit %>
+        <%= f.submit "Book Now" %>
       </div>
     <% end %>
 
