--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,7 +83,7 @@ body {
 
 /* Booking form */
 .support-body {
-	height: 580px;
+	height: 610px;
 	width: 700px;
 	margin: 50px auto;
 	border-radius: 6px;
@@ -137,6 +137,30 @@ body {
 #checkbox {
 	height: 25px;
 	margin-bottom: 10px;
+}
+
+.actions {
+  input {
+    padding: 0px;
+    margin-top: 5px;
+    border: 0px;
+    background-image: -webkit-linear-gradient(top, #62C462, #51A351);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    height: 35px;
+    width: 110px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: none;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    line-height: 35px;
+    text-align: center;
+    color: #fff;
+    border-radius: 3px;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    &:hover {
+        background-image: -webkit-linear-gradient(top, #56B156, #478B47);
+    }
+  }
 }
 
 
