--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,7 +83,7 @@ body {
 
 /* Booking form */
 .support-body {
-	height: 610px;
+	height: 800px;
 	width: 700px;
 	margin: 50px auto;
 	border-radius: 6px;
@@ -118,7 +118,8 @@ body {
 #user_phone_number,
 #user_address,
 #booking_date,
-#booking_time {
+#booking_time,
+#booking_description {
   margin: 0px;
   border-radius: 6px;
 }
@@ -142,7 +143,7 @@ body {
 .actions {
   input {
     padding: 0px;
-    margin-top: 5px;
+    margin-top: -5px;
     border: 0px;
     background-image: -webkit-linear-gradient(top, #62C462, #51A351);
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -163,4 +164,11 @@ body {
   }
 }
 
+textarea {
+	width: 660px;
+	height: 130px;
+}
 
+#description {
+	height: 175px;
+}
