--- a/app/views/static_pages/_comments.html.erb
+++ b/app/views/static_pages/_comments.html.erb
@@ -1,5 +1,15 @@
 <!-- begin htmlcommentbox.com -->
+
+<!-- customize labels of htmlcommentbox.com -->
+<script>
+ hcb_user = {
+    PAGE:'persist', // ID of the webpage to show comments for. defaults to the webpage the user is currently visiting.
+};
+</script>
+<!-- done customizing labels of htmlcommentbox.com --> 
+
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="http://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" language="javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){s=document.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src", "http://www.htmlcommentbox.com/jread?page="+escape((window.hcb_user && hcb_user.PAGE)||(""+window.location)).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24zKq9.ym3mhkXn0KwFx5bl1"+"&opts=16854&num=10");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end htmlcommentbox.com -->
+
