Succesfully update nested form and add validations

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,12 +4,12 @@
     <div class="navbar-inner">
       <div class="container">
         <ul class="nav">
-          <li class="active"><a href="http://still-springs-3943.herokuapp.com">Home</a> </li>
-          <li><a href="http://still-springs-3943.herokuapp.com/book">Services</a></li>
-          <li><a href="http://still-springs-3943.herokuapp.com">Pricing</a></li>
-          <li><a href="http://still-springs-3943.herokuapp.com">Locations</a></li>
-          <li><a href="http://still-springs-3943.herokuapp.com">Contact</a></li>
-          <li><a href="http://still-springs-3943.herokuapp.com">Help</a></li>
+          <li class="active"><%= link_to "Home", root_path %></li>
+          <li><a href="book">Services</a></li>
+          <li><a href="book">Pricing</a></li>
+          <li><a href="book">Locations</a></li>
+          <li><a href="book">Contact</a></li>
+          <li><a href="book">Help</a></li>
         </ul>
       </div>
     </div>
