--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,79 +1,59 @@
 <div class="support-body">
   <h2>Please fill in the information below to process booking</h2>
   <div id="form">
-    <%= form_for(@user) do |f| %>
-      <% if @user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-          <ul>
-          <% @user.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages', :target => @user %>
 
       <div class="field">
-        <%= f.label :name %>
+        <%= f.label :name, "Name*" %>
         <%= f.text_field :name %>
       </div>
+      
       <div class="field">
-        <%= f.label :email %>
+        <%= f.label :email, "Email*" %>
         <%= f.text_field :email %>
       </div>
+      
       <div class="field">
-        <%= f.label :phone_number %>
+        <%= f.label :phone_number, "Phone number*" %>
         <%= f.text_field :phone_number %>
       </div>
+      
       <div class="field">
-        <%= f.label :address %>
+        <%= f.label :address, "Address*" %>
         <%= f.text_field :address %>
       </div>
-    <% end %>
-  
-  <!-- Form for booking -->
 
-    <%= form_for(@booking) do |f| %>
-      <% if @booking.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+      <%= f.fields_for :bookings do |booking_form| %>
+        
+        <div class="field">
+          <%= booking_form.label :date %>
+          <%= booking_form.date_select :date %>
+        </div>
 
-          <ul>
-          <% @booking.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-          </ul>
+        <div class="field" id="last">
+          <%= booking_form.label :time %>
+          <%= am_pm_hour_select booking_form, :time, start:10 %>
+        </div>
+
+        <div class="field", id="checkbox">
+          <%= booking_form.check_box :sheets, :style => "float:left;" %>  
+          <%= booking_form.label :sheets, "My apartment has extra sheets and towels", :style => "float:left;" %>
+        </div>
+        
+        <div class="field", id="checkbox">
+          <%= booking_form.check_box :washer, :style => "float:left;" %>
+          <%= booking_form.label :washer, "My apartment has a washer and dryer", :style => "float:left;" %>
+        </div>
+
+        <div class="field", id="description">
+          <%= booking_form.label :description, "Description*" %>
+          <%= booking_form.text_area :description %>
         </div>
       <% end %>
 
-      <div class="field">
-        <%= f.label :date %>
-        <%= f.date_select :date %>
-      </div>
-      <div class="field" id="last">
-        <%= f.label :time %>
-        <%= am_pm_hour_select f, :time, start:10 %>
-      </div>
-      <div class="field", id="checkbox">
-        <%= f.check_box :sheets, :style => "float:left;" %>
-        <%= f.label :sheets, "My apartment has extra sheets and towels", :style => "float:left;" %>
-      </div>
-      <div class="field", id="checkbox">
-        <%= f.check_box :washer, :style => "float:left;" %>
-        <%= f.label :washer, "My apartment has a washer and dryer", :style => "float:left;" %>
-      </div>
-      <div class="field", id="description">
-        <%= f.label :description %>
-        <%= f.text_area :description %>
-      </div>
+      <div class="actions"><%= f.submit "Book Now" %></div>
     <% end %>
-
-    <%= form_for(@user) do |f| %>
-      <div class="actions">
-        <%= f.submit "Book Now" %>
-      </div>
-    <% end %>
-
   </div>
 </div>
